@@ -1,3 +1,8 @@
+2011-06-01  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* DevDiscover/CiscoIOS_cbQoS.pm (checkdevtype): SNMPv1 is
+	explicitly unsupported
+
 2011-04-11  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* Collector/Cisco_cbQoS.pm (initTarget): bugfix: QoS maps were
